--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,5 +1,6 @@
 head{}
-   body{}
+   body{background-image: url("../img/dieter-2.jpg")}
+
       header{}
       h1{font-family: 'Hanalei Fill', cursive;}
          h2{}
