--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,5 +1,5 @@
 head{}
-   body{background-image: url("../img/dieter-2.jpg")}
+   body{background-image: url("../img/dieter-2.jpg");margin:auto;}
 
       header{}
       h1{font-family: 'Hanalei Fill', cursive;}
