--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,7 +1,7 @@
 head{}
-   body{background-image: url("../img/dieter-2.jpg");background-position:center;background-repeat:round;background-size:contain;}
+   body{background-image: url("../img/dieter-2.jpg");background-position:center;display:none;background-size:contain;}
 
-      header{}
+      header{margin:auto;}
       h1{font-family: 'Hanalei Fill', cursive;}
          h2{}
    main{}
