--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,5 +1,5 @@
 head{}
-   body{background-image: url("../img/dieter-2.jpg");background-position:center;display:none;background-size:contain;}
+   body{background-image: url("../img/dieter-2.jpg");background-position:center;background-size:contain;}
 
       header{}
       h1{font-family: 'Hanalei Fill', cursive;}
