--- a/site/css/style.css
+++ b/site/css/style.css
@@ -22,7 +22,7 @@ head{}
         grid-gap: 10px;
         grid-auto-rows: minmax(100px, auto);
       }
-      .one {
+      .one {background-color: rgba(252, 98, 33, 0.5);
         grid-column: 1 / 3;
         grid-row: 1;
       }
@@ -30,7 +30,7 @@ head{}
         grid-column: 2 / 4;
         grid-row: 1 / 3;
       }
-      .three {
+      .three {background-color: rgba(252, 98, 33, 0.5);
         grid-column: 1;
         grid-row: 2 / 5;
       }
@@ -38,26 +38,16 @@ head{}
         grid-column: 3;
         grid-row: 3;
       }
-      .five {
+      .five {background-color: rgba(252, 98, 33, 0.5);
         grid-column: 2;
         grid-row: 4;
-      }
-      .wrapper-2 > div {
-       background-color: rgba(252, 98, 33, 0.5);
-       padding: 1em;
-       color: black;
-      }.wrapper-2 {
-       display: grid;
-       grid-template-columns: repeat(3, 1fr);
-       grid-gap: 10px;
-       grid-auto-rows: minmax(100px, auto);
       }
 
       .six {
         grid-column: 3;
         grid-row: 4;
       }
-      .seven {
+      .seven {background-color: rgba(252, 98, 33, 0.5);
         grid-column: 2;
         grid-row: 2;
       }
@@ -65,7 +55,7 @@ head{}
         grid-column: 2;
         grid-row: 4;
       }
-      .nine {
+      .nine {background-color: rgba(252, 98, 33, 0.5);
         grid-column: 1;
         grid-row: 4;
       }
