--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,7 +1,7 @@
 head{}
    body{}
       header{margin:auto;}
-      h1{font-family: 'Hanalei Fill', cursive;margin:auto;}
+      h1{font-family: 'Hanalei Fill', cursive;margin:auto;text-align:center;}
          h2{}
    main{}
 
