--- a/site/css/style.css
+++ b/site/css/style.css
@@ -2,7 +2,7 @@ head{}
    body{}
       header{margin:auto;}
       h1{font-family: 'Hanalei Fill', cursive;margin:auto;text-align:center;}
-         h2{}
+         h2{text-align:center;}
    main{}
 
       * {box-sizing: border-box;}
