--- a/site/css/style.css
+++ b/site/css/style.css
@@ -11,15 +11,11 @@ head{}
         max-width: 1000px;
         margin: 0 auto;
       }
-
-      .wrapper > div {
-
-        padding: 1em;
-        color: black;
-      }.wrapper {
+.wrapper > div { padding: 1em;color: black;}
+.wrapper {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-gap: 10px;
+        grid-template-columns: repeat(5, 1fr);
+        grid-gap: -10px;
         grid-auto-rows: minmax(100px, auto);
       }
       .one {background-color: rgba(252, 98, 33, 0.5);
