--- a/site/css/style.css
+++ b/site/css/style.css
@@ -19,24 +19,24 @@ head{}
         grid-auto-rows: minmax(100px, auto);
       }
       .one {background-color: rgba(252, 98, 33, 0.5);
-        grid-column: 1 / 3;
+        grid-column: 1;
         grid-row: 1;
       }
       .two {background-color: rgba(33, 252, 222, 0.5);
-        grid-column: 2 / 4;
-        grid-row: 2 / 5;
+        grid-column: 2;
+        grid-row: 2;
       }
       .three {background-color: rgba(252, 98, 33, 0.5);
-        grid-column: 1;
-        grid-row: 2 / 5;
-      }
-      .four {background-color: rgba(33, 252, 222, 0.5);
         grid-column: 3;
         grid-row: 3;
       }
-      .five {background-color: rgba(252, 98, 33, 0.5);
-        grid-column: 2;
+      .four {background-color: rgba(33, 252, 222, 0.5);
+        grid-column: 4;
         grid-row: 4;
+      }
+      .five {background-color: rgba(252, 98, 33, 0.5);
+        grid-column: 5;
+        grid-row: 5;
       }
 
       .six {background-color: rgba(33, 252, 222, 0.5);
