--- a/site/css/style.css
+++ b/site/css/style.css
@@ -40,23 +40,23 @@ head{}
       }
 
       .six {background-color: rgba(33, 252, 222, 0.5);
-        grid-column: 3;
-        grid-row: 4;
+        grid-column: 1;
+        grid-row: 5;
       }
       .seven {background-color: rgba(252, 98, 33, 0.5);
         grid-column: 2;
-        grid-row: 2;
+        grid-row: 4;
       }
       .eight {background-color: rgba(33, 252, 222, 0.5);
-        grid-column: 2;
-        grid-row: 4;
+        grid-column: 3/2;
+        grid-row: 3/2;
       }
       .nine {background-color: rgba(252, 98, 33, 0.5);
-        grid-column: 1;
-        grid-row: 4;
+        grid-column: 4;
+        grid-row: 2;
       }
       .ten {background-color: rgba(33, 252, 222, 0.5);
-        grid-column: 4;
+        grid-column: 5;
         grid-row: 1;
       }
 
