--- a/site/css/style.css
+++ b/site/css/style.css
@@ -19,8 +19,8 @@ head{}
         grid-auto-rows: minmax(100px, auto);
       }
       .one {background-color: rgba(252, 98, 33, 0.5);
-        grid-column: 1;
-        grid-row: 1;
+        grid-column: 1/5;
+        grid-row: 1/5;
       }
       .two {background-color: rgba(33, 252, 222, 0.5);
         grid-column: 2;
