--- a/site/css/style.css
+++ b/site/css/style.css
@@ -18,44 +18,44 @@ head{}
         grid-gap: 10px;
         grid-auto-rows: minmax(100px, auto);
       }
-      .one {background-color: rgba(252, 98, 33, 0.5);
+      .one {background-color: rgba(252, 98, 33, 0.2);
         grid-column: 1/6;
+        grid-row: 2/3;
+      }
+      .two {background-color: rgba(33, 252, 222, 0.2);
+        grid-column: 2/4;
+        grid-row: 3/3;
+      }
+      .three {background-color: rgba(252, 98, 33, 0.2);
+        grid-column: 3/2;
         grid-row: 3/7;
       }
-      .two {background-color: rgba(33, 252, 222, 0.5);
-        grid-column: 2;
-        grid-row: 2;
-      }
-      .three {background-color: rgba(252, 98, 33, 0.5);
-        grid-column: 3;
-        grid-row: 3;
-      }
-      .four {background-color: rgba(33, 252, 222, 0.5);
+      .four {background-color: rgba(33, 252, 222, 0.2);
         grid-column: 4;
         grid-row: 4;
       }
-      .five {background-color: rgba(252, 98, 33, 0.5);
+      .five {background-color: rgba(252, 98, 33, 0.2);
         grid-column: 5;
         grid-row: 5;
       }
 
-      .six {background-color: rgba(33, 252, 222, 0.5);
+      .six {background-color: rgba(33, 252, 222, 0.2);
         grid-column: 1;
         grid-row: 5;
       }
-      .seven {background-color: rgba(252, 98, 33, 0.5);
+      .seven {background-color: rgba(252, 98, 33, 0.2);
         grid-column: 2;
         grid-row: 4;
       }
-      .eight {background-color: rgba(33, 252, 222, 0.5);
+      .eight {background-color: rgba(33, 252, 222, 0.2);
         grid-column: 3/2;
         grid-row: 3/2;
       }
-      .nine {background-color: rgba(252, 98, 33, 0.5);
+      .nine {background-color: rgba(252, 98, 33, 0.2);
         grid-column: 4;
         grid-row: 2;
       }
-      .ten {background-color: rgba(33, 252, 222, 0.5);
+      .ten {background-color: rgba(33, 252, 222, 0.2);
         grid-column: 5;
         grid-row: 1;
       }
