--- a/site/css/style.css
+++ b/site/css/style.css
@@ -19,37 +19,37 @@ head{}
         grid-auto-rows: minmax(100px, auto);
       }
       .one {background-color: rgba(252, 98, 33, 0.2);
-        grid-column: 1/6;
-        grid-row: 2/3;
+        grid-column: 1;
+        grid-row: 1;
       }
       .two {background-color: rgba(33, 252, 222, 0.2);
-        grid-column: 2/4;
-        grid-row: 3/3;
+        grid-column: 2;
+        grid-row: 1;
       }
       .three {background-color: rgba(252, 98, 33, 0.2);
-        grid-column: 3/2;
-        grid-row: 3/7;
+        grid-column: 3;
+        grid-row: 1;
       }
       .four {background-color: rgba(33, 252, 222, 0.2);
         grid-column: 4;
-        grid-row: 4;
+        grid-row: 1;
       }
       .five {background-color: rgba(252, 98, 33, 0.2);
         grid-column: 5;
-        grid-row: 5;
+        grid-row: 1;
       }
 
       .six {background-color: rgba(33, 252, 222, 0.2);
         grid-column: 1;
-        grid-row: 5;
+        grid-row: 2;
       }
       .seven {background-color: rgba(252, 98, 33, 0.2);
         grid-column: 2;
-        grid-row: 4;
+        grid-row: 2;
       }
       .eight {background-color: rgba(33, 252, 222, 0.2);
-        grid-column: 3/2;
-        grid-row: 3/2;
+        grid-column: 3;
+        grid-row: 2;
       }
       .nine {background-color: rgba(252, 98, 33, 0.2);
         grid-column: 4;
@@ -57,7 +57,7 @@ head{}
       }
       .ten {background-color: rgba(33, 252, 222, 0.2);
         grid-column: 5;
-        grid-row: 1;
+        grid-row: 2;
       }
 
 
