--- a/site/css/style.css
+++ b/site/css/style.css
@@ -19,16 +19,16 @@ head{}
         grid-auto-rows: minmax(100px, auto);
       }
       .one {background-color: rgba(252, 98, 33, 0.2);
-        grid-column: 1;
-        grid-row: 1;
+        grid-column: 1/3;
+        grid-row: 1/3;
       }
       .two {background-color: rgba(33, 252, 222, 0.2);
-        grid-column: 2;
-        grid-row: 1;
+        grid-column: 2/3;
+        grid-row: 1/3;
       }
       .three {background-color: rgba(252, 98, 33, 0.2);
-        grid-column: 3;
-        grid-row: 1;
+        grid-column: 3/3;
+        grid-row: 1/3;
       }
       .four {background-color: rgba(33, 252, 222, 0.2);
         grid-column: 4;
