--- a/site/css/style.css
+++ b/site/css/style.css
@@ -20,7 +20,7 @@ head{}
       }
       .one {background-color: rgba(252, 98, 33, 0.2);
         grid-column: 1/3;
-        grid-row: 1;
+        grid-row: 3/3;
       }
       .two {background-color: rgba(33, 252, 222, 0.2);
         grid-column: 2/3;
