--- a/site/css/style.css
+++ b/site/css/style.css
@@ -14,17 +14,17 @@ head{}
 .wrapper > div { padding: 1em;color: black;}
 .wrapper {
         display: grid;
-        grid-template-columns: repeat(5, 1fr);
+        grid-template-columns: repeat(3, 1fr);
         grid-gap: 10px;
-        grid-auto-rows: minmax(100px, auto);
+        grid-auto-rows: minmax(100px, auto);border-radius:5px;
       }
       .one {background-color: rgba(252, 98, 33, 0.2);
         grid-column: 1/3;
-        grid-row: 3/3;
+        grid-row: 1;
       }
       .two {background-color: rgba(33, 252, 222, 0.2);
-        grid-column: 2/3;
-        grid-row: 1;
+        grid-column: 2;
+        grid-row: 2/5;
       }
       .three {background-color: rgba(252, 98, 33, 0.2);
         grid-column: 3/3;
