--- a/site/css/style.css
+++ b/site/css/style.css
@@ -24,7 +24,7 @@ head{}
       }
       .two {background-color: rgba(33, 252, 222, 0.2);
         grid-column: 2;
-        grid-row: 1/5;
+        grid-row: 1;
       }
       .three {background-color: rgba(252, 98, 33, 0.2);
         grid-column: 3/2;
