--- a/site/css/style.css
+++ b/site/css/style.css
@@ -24,33 +24,35 @@ head{}
       }
       .two {background-color: rgba(33, 252, 222, 0.2);
         grid-column: 2;
-        grid-row: 1;
+        grid-row: 1/3;
       }
       .three {background-color: rgba(252, 98, 33, 0.2);
-        grid-column: 3/2;
-        grid-row: 3;
+        grid-column: 3/4;
+        grid-row: 2;
       }
       .four {background-color: rgba(33, 252, 222, 0.2);
+         grid-column: 1/5;
+        grid-row: 2;
 
       }
       .five {background-color: rgba(252, 98, 33, 0.2);
-
+display:none;
       }
 
       .six {background-color: rgba(33, 252, 222, 0.2);
-
+display:none;
       }
       .seven {background-color: rgba(252, 98, 33, 0.2);
-
+display:none;
       }
       .eight {background-color: rgba(33, 252, 222, 0.2);
-
+display:none;
       }
       .nine {background-color: rgba(252, 98, 33, 0.2);
-
+display:none;
       }
       .ten {background-color: rgba(33, 252, 222, 0.2);
-
+display:none;
       }
 
 
