--- a/site/css/style.css
+++ b/site/css/style.css
@@ -23,16 +23,16 @@ head{}
         grid-row: 1;
       }
       .two {background-color: rgba(33, 252, 222, 0.2);
-        grid-column: 2;
+        grid-column: 3;
         grid-row: 1/4;
       }
       .three {background-color: rgba(252, 98, 33, 0.2);
-        grid-column: 3/5;
+        grid-column: 4/6;
         grid-row: 2;
       }
       .four {background-color: rgba(33, 252, 222, 0.2);
-         grid-column: 1/5;
-        grid-row: 2;
+         grid-column: 2/4;
+        grid-row: 2/3;
 
       }
       .five {background-color: rgba(252, 98, 33, 0.2);
