--- a/site/css/style.css
+++ b/site/css/style.css
@@ -23,39 +23,55 @@ head{}
         grid-row: 1;
       }
    .one:hover{z-index:1;width:400px;height:600px;}
+
       .two {background-color: rgba(33, 252, 222, 0.2);
         grid-column: 3;
         grid-row: 1/4;
       }
    .two:hover{z-index:1;width:400px;height:600px;}
+
       .three {background-color: rgba(252, 98, 33, 0.2);
         grid-column: 4/6;
         grid-row: 2;
-      }
+        }
+   .three:hover{z-index:1;width:400px;height:600px;}
+
       .four {background-color: rgba(33, 252, 222, 0.2);
          grid-column: 2/4;
         grid-row: 2/4;
+        }
+   .four:hover{z-index:1;width:400px;height:600px;}
+
+
+      .five {background-color: rgba(252, 98, 33, 0.2);
 
       }
-      .five {background-color: rgba(252, 98, 33, 0.2);
-display:none;
-      }
+   .five:hover{z-index:1;width:400px;height:600px;}
 
       .six {background-color: rgba(33, 252, 222, 0.2);
 display:none;
       }
+   .six:hover{z-index:1;width:400px;height:600px;}
+
       .seven {background-color: rgba(252, 98, 33, 0.2);
 display:none;
       }
+   .seven:hover{z-index:1;width:400px;height:600px;}
+
       .eight {background-color: rgba(33, 252, 222, 0.2);
 display:none;
       }
+   .eight:hover{z-index:1;width:400px;height:600px;}
+
       .nine {background-color: rgba(252, 98, 33, 0.2);
 display:none;
       }
+   .nine:hover{z-index:1;width:400px;height:600px;}
+
       .ten {background-color: rgba(33, 252, 222, 0.2);
 display:none;
       }
+   .ten:hover{z-index:1;width:400px;height:600px;}
 
 
    footer{}
