--- a/site/css/style.css
+++ b/site/css/style.css
@@ -22,7 +22,7 @@ head{}
         grid-column: 1/4;
         grid-row: 1;
       }
-   .one:hover{z-index:1;width:400px;height:600px;opacity:1}
+   .one:hover{z-index:1;width:400px;height:600px;color:rgba(252, 98, 33, 0)}
 
       .two {background-color: rgba(33, 252, 222, 0.2);
         grid-column: 3;
