--- a/site/css/style.css
+++ b/site/css/style.css
@@ -22,7 +22,7 @@ head{}
         grid-column: 1/4;
         grid-row: 1;
       }
-   .one:hover{z-index:1;width:400px;height:600px;color:rgba(252, 98, 33, 0)}
+   .one:hover{z-index:1;width:400px;height:600px;}
 
       .two {background-color: rgba(33, 252, 222, 0.2);
         grid-column: 3;
@@ -44,7 +44,8 @@ head{}
 
 
       .five {background-color: rgba(252, 98, 33, 0.2);
-
+         grid-column:1/5;
+         grid-row: 3/5;
       }
    .five:hover{z-index:1;width:400px;height:600px;}
 
