--- a/site/css/style.css
+++ b/site/css/style.css
@@ -62,22 +62,21 @@ head{}
    .seven:hover{z-index:1;width:400px;height:600px;}
 
       .eight {background-color: rgba(33, 252, 222, 0.2);
-
          grid-column: 2/7;
          grid-row: 7/10;
       }
    .eight:hover{z-index:1;width:400px;height:600px;}
 
       .nine {background-color: rgba(252, 98, 33, 0.2);
-         grid-column: 2/4;
-         grid-row: 2/4;
-      display:none}
+         grid-column: 1/4;
+         grid-row: 9/11;
+      }
    .nine:hover{z-index:1;width:400px;height:600px;}
 
       .ten {background-color: rgba(33, 252, 222, 0.2);
-         grid-column: 2/4;
-         grid-row: 2/4;
-      display:none}
+         grid-column: 4/4;
+         grid-row: 9/13;
+      }
    .ten:hover{z-index:1;width:400px;height:600px;}
 
 
