--- a/site/css/style.css
+++ b/site/css/style.css
@@ -16,13 +16,13 @@ head{}
         display: grid;
         grid-template-columns: repeat(5, 1fr);
         grid-gap: 10px;
-        grid-auto-rows: minmax(100px, auto);border-radius:5px;
+        grid-auto-rows: minmax(100px, auto);
       }
       .one {background-color: rgba(252, 98, 33, 0.2);
         grid-column: 1/4;
         grid-row: 1;
       }
-   .one:hover{z-index:1;width:400px;height:600px;}
+   .one:hover{z-index:1;width:400px;height:600px;background-color:black;}
 
       .two {background-color: rgba(33, 252, 222, 0.2);
         grid-column: 3;
