--- a/site/css/style.css
+++ b/site/css/style.css
@@ -22,7 +22,7 @@ head{}
         grid-column: 1/4;
         grid-row: 1;
       }
-   .one:hover{z-index:1;width:400px;height:600px;background-color:black;}
+   .one:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 0);}
 
       .two {background-color: rgba(33, 252, 222, 0.2);
         grid-column: 3;
@@ -34,7 +34,7 @@ head{}
         grid-column: 4/6;
         grid-row: 2;
         }
-   .three:hover{z-index:1;width:400px;height:600px;}
+   .three:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 0)}
 
       .four {background-color: rgba(33, 252, 222, 0.2);
          grid-column: 2/5;
