--- a/site/css/style.css
+++ b/site/css/style.css
@@ -28,7 +28,7 @@ head{}
         grid-column: 3;
         grid-row: 1/4;
       }
-   .two:hover{z-index:1;width:400px;height:600px;}
+   .two:hover{z-index:1;width:400px;height:600px;background-color: rgba(33, 252, 222, 1)}
 
       .three {background-color: rgba(252, 98, 33, 0.4);
         grid-column: 4/6;
@@ -36,48 +36,48 @@ head{}
         }
    .three:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 1)}
 
-      .four {background-color: rgba(33, 252, 222, 0.2);
+      .four {background-color: rgba(33, 252, 222, 0.4);
          grid-column: 2/5;
         grid-row: 2/6;
         }
-   .four:hover{z-index:1;width:400px;height:600px;}
+   .four:hover{z-index:1;width:400px;height:600px;background-color: rgba(33, 252, 222, 1)}
 
 
-      .five {background-color: rgba(252, 98, 33, 0.2);
+      .five {background-color: rgba(252, 98, 33, 0.4);
          grid-column:1/5;
          grid-row: 3/5;
       }
-   .five:hover{z-index:1;width:400px;height:600px;}
+   .five:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 1)}
 
-      .six {background-color: rgba(33, 252, 222, 0.2);
+      .six {background-color: rgba(33, 252, 222, 0.4);
          grid-column: 4/6;
         grid-row: 4;
       }
-   .six:hover{z-index:1;width:400px;height:600px;}
+   .six:hover{z-index:1;width:400px;height:600px;background-color: rgba(33, 252, 222, 1)}
 
-      .seven {background-color: rgba(252, 98, 33, 0.2);
+      .seven {background-color: rgba(252, 98, 33, 0.4);
          grid-column: 3/5;
          grid-row: 5/8;
       }
-   .seven:hover{z-index:1;width:400px;height:600px;}
+   .seven:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 1)}
 
-      .eight {background-color: rgba(33, 252, 222, 0.2);
+      .eight {background-color: rgba(33, 252, 222, 0.4);
          grid-column: 2/7;
          grid-row: 7/10;
       }
-   .eight:hover{z-index:1;width:400px;height:600px;}
+   .eight:hover{z-index:1;width:400px;height:600px;background-color: rgba(33, 252, 222, 1)}
 
-      .nine {background-color: rgba(252, 98, 33, 0.2);
+      .nine {background-color: rgba(252, 98, 33, 0.4);
          grid-column: 1/4;
          grid-row: 9/11;
       }
-   .nine:hover{z-index:1;width:400px;height:600px;}
+   .nine:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 1)}
 
-      .ten {background-color: rgba(33, 252, 222, 0.2);
+      .ten {background-color: rgba(33, 252, 222, 0.4);
          grid-column: 3/5;
          grid-row: 9/13;
       }
-   .ten:hover{z-index:1;width:400px;height:600px;}
+   .ten:hover{z-index:1;width:400px;height:600px;background-color: rgba(33, 252, 222, 1)}
 
 
    footer{}
