--- a/site/css/style.css
+++ b/site/css/style.css
@@ -15,7 +15,7 @@ head{}
 .wrapper {
         display: grid;
         grid-template-columns: repeat(5, 1fr);
-        grid-gap: 10px;
+        grid-gap: 0px;
         grid-auto-rows: minmax(100px, auto);
       }
       .one {background-color: rgba(252, 98, 33, 0.4);
@@ -25,39 +25,39 @@ head{}
    .one:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 1);}
 
       .two {background-color: rgba(33, 252, 222, 0.4);
-        grid-column: 3;
+        grid-column: 3/5;
         grid-row: 1/4;
       }
    .two:hover{z-index:1;width:400px;height:600px;background-color: rgba(33, 252, 222, 1)}
 
       .three {background-color: rgba(252, 98, 33, 0.4);
         grid-column: 4/6;
-        grid-row: 2;
+        grid-row: 2/4;
         }
    .three:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 1)}
 
       .four {background-color: rgba(33, 252, 222, 0.4);
          grid-column: 2/5;
-        grid-row: 2/6;
+        grid-row: 4/6;
         }
    .four:hover{z-index:1;width:400px;height:600px;background-color: rgba(33, 252, 222, 1)}
 
 
       .five {background-color: rgba(252, 98, 33, 0.4);
          grid-column:1/5;
-         grid-row: 3/5;
+         grid-row: 5/7;
       }
    .five:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 1)}
 
       .six {background-color: rgba(33, 252, 222, 0.4);
          grid-column: 4/6;
-        grid-row: 4;
+        grid-row: 5;
       }
    .six:hover{z-index:1;width:400px;height:600px;background-color: rgba(33, 252, 222, 1)}
 
       .seven {background-color: rgba(252, 98, 33, 0.4);
          grid-column: 3/5;
-         grid-row: 5/8;
+         grid-row: 6/8;
       }
    .seven:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 1)}
 
