--- a/site/css/style.css
+++ b/site/css/style.css
@@ -32,49 +32,49 @@ head{}
 
       .three {background-color: rgba(252, 98, 33, 0.4);
         grid-column: 4/6;
-        grid-row: 2/4;
+        grid-row: 3/6;
         }
    .three:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 1)}
 
       .four {background-color: rgba(33, 252, 222, 0.4);
          grid-column: 2/5;
-        grid-row: 4/6;
+        grid-row: 5/7;
         }
    .four:hover{z-index:1;width:400px;height:600px;background-color: rgba(33, 252, 222, 1)}
 
 
       .five {background-color: rgba(252, 98, 33, 0.4);
-         grid-column:1/5;
-         grid-row: 5/7;
+         grid-column:1/4;
+         grid-row: 6/9;
       }
    .five:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 1)}
 
       .six {background-color: rgba(33, 252, 222, 0.4);
          grid-column: 4/6;
-        grid-row: 5;
+        grid-row: 8/10;
       }
    .six:hover{z-index:1;width:400px;height:600px;background-color: rgba(33, 252, 222, 1)}
 
       .seven {background-color: rgba(252, 98, 33, 0.4);
-         grid-column: 3/5;
+         display:none;grid-column: 3/5;
          grid-row: 6/8;
       }
    .seven:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 1)}
 
       .eight {background-color: rgba(33, 252, 222, 0.4);
-         grid-column: 2/7;
+         display:none;grid-column: 2/7;
          grid-row: 7/10;
       }
    .eight:hover{z-index:1;width:400px;height:600px;background-color: rgba(33, 252, 222, 1)}
 
       .nine {background-color: rgba(252, 98, 33, 0.4);
-         grid-column: 1/4;
+         display:none;grid-column: 1/4;
          grid-row: 9/11;
       }
    .nine:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 1)}
 
       .ten {background-color: rgba(33, 252, 222, 0.4);
-         grid-column: 3/5;
+         display:none;grid-column: 3/5;
          grid-row: 9/13;
       }
    .ten:hover{z-index:1;width:400px;height:600px;background-color: rgba(33, 252, 222, 1)}
