--- a/site/css/style.css
+++ b/site/css/style.css
@@ -62,8 +62,8 @@ head{}
    .seven:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 1)}
 
       .eight {background-color: rgba(33, 252, 222, 0.4);
-         display:none;grid-column: 2/7;
-         grid-row: 7/10;
+         grid-column: 4/8;
+         grid-row: 13/14;
       }
    .eight:hover{z-index:1;width:400px;height:600px;background-color: rgba(33, 252, 222, 1)}
 
