--- a/site/css/style.css
+++ b/site/css/style.css
@@ -62,19 +62,19 @@ head{}
    .seven:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 1)}
 
       .eight {background-color: rgba(33, 252, 222, 0.4);
-         display:none;grid-column: 5/7;
+         grid-column: 5/7;
          grid-row: 13/16;
       }
    .eight:hover{z-index:1;width:400px;height:600px;background-color: rgba(33, 252, 222, 1)}
 
       .nine {background-color: rgba(252, 98, 33, 0.4);
-         display:none;grid-column: 6/7;
+         grid-column: 6/7;
          grid-row: 15/18;
       }
    .nine:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 1)}
 
       .ten {background-color: rgba(33, 252, 222, 0.4);
-         display:none;display:none;grid-column: 3/5;
+         display:none;grid-column: 3/5;
          grid-row: 17/21;
       }
    .ten:hover{z-index:1;width:400px;height:600px;background-color: rgba(33, 252, 222, 1)}
