--- a/site/css/style.css
+++ b/site/css/style.css
@@ -22,62 +22,61 @@ head{}
         grid-column: 1/4;
         grid-row: 1;
       }
-   .one:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 1);}
+   .one:hover{z-index:1;background-color:rgba(252, 98, 33, 1);}
 
       .two {background-color: rgba(33, 252, 222, 0.4);
         grid-column: 3/7;
         grid-row: 1/4;
       }
-   .two:hover{z-index:1;width:400px;height:600px;background-color: rgba(33, 252, 222, 1)}
+   .two:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
 
       .three {background-color: rgba(252, 98, 33, 0.4);
         grid-column: 4/6;
         grid-row: 3/6;
         }
-   .three:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 1)}
+   .three:hover{z-index:1;background-color:rgba(252, 98, 33, 1)}
 
       .four {background-color: rgba(33, 252, 222, 0.4);
          grid-column: 2/5;
         grid-row: 5/7;
         }
-   .four:hover{z-index:1;width:400px;height:600px;background-color: rgba(33, 252, 222, 1)}
+   .four:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
 
 
       .five {background-color: rgba(252, 98, 33, 0.4);
          grid-column:1/3;
          grid-row: 6/10;
       }
-   .five:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 1)}
+   .five:hover{z-index:1;background-color:rgba(252, 98, 33, 1)}
 
       .six {background-color: rgba(33, 252, 222, 0.4);
          grid-column: 2/5;
         grid-row: 9/11;
       }
-   .six:hover{z-index:1;width:400px;height:600px;background-color: rgba(33, 252, 222, 1)}
+   .six:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
 
       .seven {background-color: rgba(252, 98, 33, 0.4);
          grid-column: 4/6;
          grid-row: 10/14;
       }
-   .seven:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 1)}
+   .seven:hover{z-index:1;background-color:rgba(252, 98, 33, 1)}
 
       .eight {background-color: rgba(33, 252, 222, 0.4);
          grid-column: 2/5;
          grid-row: 13/16;
       }
-   .eight:hover{z-index:1;width:400px;height:600px;background-color: rgba(33, 252, 222, 1)}
+   .eight:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
 
       .nine {background-color: rgba(252, 98, 33, 0.4);
          grid-column: 2/4;
          grid-row: 15/18;
       }
-   .nine:hover{z-index:1;width:400px;height:600px;background-color:rgba(252, 98, 33, 1)}
+   .nine:hover{z-index:1;background-color:rgba(252, 98, 33, 1)}
 
       .ten {background-color: rgba(33, 252, 222, 0.4);
          display:none;grid-column: 3/5;
          grid-row: 17/21;
       }
-   .ten:hover{z-index:1;width:400px;height:600px;background-color: rgba(33, 252, 222, 1)}
-
+   .ten:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
 
    footer{}
