--- a/site/css/style.css
+++ b/site/css/style.css
@@ -12,7 +12,7 @@ head{}
         margin: 0 auto;
       }
 .wrapper > div { padding: 1em;color: black;font-family: 'Press Start 2P', cursive;
-font-size:400px;text-align:center;
+text-align:center;
 }
 .wrapper {
         display: grid;
