--- a/site/css/style.css
+++ b/site/css/style.css
@@ -12,7 +12,6 @@ head{}
         margin: 0 auto;
       }
 .wrapper > div { padding: 1em;color: black;font-family: 'Press Start 2P', cursive;
-
 }
 .wrapper {
         display: grid;
@@ -20,7 +19,7 @@ head{}
         grid-gap: 0px;
         grid-auto-rows: minmax(100px, auto);
       }
-      .one {background-color: rgba(252, 98, 33, 0.4);
+      .one {
         grid-column: 1/4;
         grid-row: 1;
       }
