--- a/site/css/style.css
+++ b/site/css/style.css
@@ -19,7 +19,7 @@ head{}
         grid-gap: 0px;
         grid-auto-rows: minmax(100px, auto);
       }
-      .one {
+      .one {background-color: rgba(252, 98, 33, 0.4);
         grid-column: 1/4;
         grid-row: 1;
       }
