--- a/site/css/style.css
+++ b/site/css/style.css
@@ -21,7 +21,7 @@ head{}
       }
       .one {background-color: rgba(252, 98, 33, 0.4);
         grid-column: 1/4;
-        grid-row: 1;
+        grid-row: 1;font-size:200px;
       }
    .one:hover{z-index:1;background-color:rgba(252, 98, 33, 1);}
 
