--- a/site/css/style.css
+++ b/site/css/style.css
@@ -19,11 +19,11 @@ head{}
         grid-gap: 0px;
         grid-auto-rows: minmax(100px, auto);
       }
-      .one {background-color: rgba(252, 98, 33, 0.4);
+      .one {background-color: black;
         grid-column: 1/4;
-        grid-row: 1;font-size:200px;
+        grid-row: 1;font-size:16px;
       }
-   .one:hover{z-index:1;background-color:rgba(252, 98, 33, 1);}
+   .one:hover{z-index:1;background-color:rgba(252, 98, 33, .5);}
 
       .two {background-color: rgba(33, 252, 222, 0.4);
         grid-column: 3/7;
