--- a/site/css/style.css
+++ b/site/css/style.css
@@ -19,10 +19,12 @@ head{}
         grid-gap: 0px;
         grid-auto-rows: minmax(100px, auto);
       }
-      .one {background-color: black;
+      .one {background-color: rgba(252, 98, 33, 0.4);
         grid-column: 1/4;
         grid-row: 1;font-size:16px;
       }
+   .principle{display:none;}
+      .principle:hover{z-index:1}
    .one:hover{z-index:1;background-color:rgba(252, 98, 33, .5);}
 
       .two {background-color: rgba(33, 252, 222, 0.4);
