--- a/site/css/style.css
+++ b/site/css/style.css
@@ -23,7 +23,7 @@ head{}
         grid-column: 1/4;
         grid-row: 1;font-size:16px;
       }
-   .principle{display:none;}
+   .principle{}
       .principle:hover{z-index:1}
    .one:hover{z-index:1;background-color:rgba(252, 98, 33, .5);}
 
