--- a/site/css/style.css
+++ b/site/css/style.css
@@ -21,11 +21,12 @@ head{}
       }
       .one {background-color: rgba(252, 98, 33, 0.4);
         grid-column: 1/4;
-        grid-row: 1;font-size:16px;
+        grid-row: 1;font-size:80px;
       }
-   .principle{color:rgba(252, 98, 33, 0.4)}
+   .principle{color:rgba(252, 98, 33, 0.2)}
       .principle:hover{z-index:1;color:black;}
-   .one:hover{z-index:1;background-color:rgba(252, 98, 33, .5);}
+   .one:hover{z-index:1;background-color:rgba(252, 98, 33, .5);
+   width:400px;height:400px}
 
       .two {background-color: rgba(33, 252, 222, 0.4);
         grid-column: 3/7;
