--- a/site/css/style.css
+++ b/site/css/style.css
@@ -23,7 +23,7 @@ head{}
         grid-column: 1/4;
         grid-row: 1;
       }
-   .one:hover{z-index:1;background-color:rgba(252, 98, 33, .5);}
+   .one:hover{z-index:1;background-color:rgba(252, 98, 33, .1);width:1000px;}
 
       .two {background-color: rgba(33, 252, 222, 0.4);
         grid-column: 3/7;
@@ -79,5 +79,5 @@ head{}
          grid-row: 17/21;
       }
    .ten:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
-
+.rule-even{text-align:left;color:white;z-index:1;width:200px;padding:80px}
    footer{}
