--- a/site/css/style.css
+++ b/site/css/style.css
@@ -4,6 +4,8 @@ head{}
       h1{font-family: 'Hanalei Fill', cursive;margin:auto;text-align:center;}
          h2{text-align:center;}
    main{padding:80px}
+   .box{width:400px;height:200px;margin:auto;background-color:red}
+      .box:hover{width:100%;height:600px;background-color:black}
 
       * {box-sizing: border-box;}
       * {box-sizing: border-box;}
