--- a/site/css/style.css
+++ b/site/css/style.css
@@ -5,10 +5,6 @@ head{}
          h2{text-align:center;}
    main{padding:80px}
 
-   .box{width:400px;height:200px;margin:auto;background-color:red}
-      .box:hover{width:100%;height:600px;background-color:black;}
-
-.principles-odd{z-index:1;width:400px;color:black;font-family: 'Press Start 2P', cursive;}
       * {box-sizing: border-box;}
       * {box-sizing: border-box;}
       .wrapper {
@@ -28,7 +24,7 @@ head{}
         grid-row: 1;
       }
    .one:hover{background-color:rgba(252, 98, 33, 1);
-   width:100%;}
+            }
 
       .two {background-color: rgba(33, 252, 222, 0.4);
         grid-column: 3/7;
@@ -37,50 +33,50 @@ head{}
    .two:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
 
       .three {background-color: rgba(252, 98, 33, 0.4);
-        grid-column: 4/6;
+        display:none;grid-column: 4/6;
         grid-row: 3/6;
         }
    .three:hover{z-index:1;background-color:rgba(252, 98, 33, 1)}
 
       .four {background-color: rgba(33, 252, 222, 0.4);
-         grid-column: 2/5;
+         display:none;grid-column: 2/5;
         grid-row: 5/7;
         }
    .four:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
 
 
       .five {background-color: rgba(252, 98, 33, 0.4);
-         grid-column:1/3;
+         display:none;grid-column:1/3;
          grid-row: 6/10;
       }
    .five:hover{z-index:1;background-color:rgba(252, 98, 33, 1)}
 
       .six {background-color: rgba(33, 252, 222, 0.4);
-         grid-column: 2/5;
+         display:none;grid-column: 2/5;
         grid-row: 9/11;
       }
    .six:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
 
       .seven {background-color: rgba(252, 98, 33, 0.4);
-         grid-column: 4/6;
+         display:none;grid-column: 4/6;
          grid-row: 10/14;
       }
    .seven:hover{z-index:1;background-color:rgba(252, 98, 33, 1)}
 
       .eight {background-color: rgba(33, 252, 222, 0.4);
-         grid-column: 2/5;
+         display:none;grid-column: 2/5;
          grid-row: 13/16;
       }
    .eight:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
 
       .nine {background-color: rgba(252, 98, 33, 0.4);
-         grid-column: 2/4;
+         display:none;grid-column: 2/4;
          grid-row: 15/18;
       }
    .nine:hover{z-index:1;background-color:rgba(252, 98, 33, 1)}
 
       .ten {background-color: rgba(33, 252, 222, 0.4);
-         display:none;grid-column: 3/5;
+         display:none;display:none;grid-column: 3/5;
          grid-row: 17/21;
       }
    .ten:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
