--- a/site/css/style.css
+++ b/site/css/style.css
@@ -30,7 +30,9 @@ head{}
         grid-column: 3/5;
         grid-row: 1/3;
       }
-   .two:hover{z-index:1;background-color: rgba(33, 252, 222, 1)}
+   .two:hover{;background-color: rgba(33, 252, 222, 1);
+      grid-column: 1/5;
+     grid-row: 1/3;}
 
       .three {background-color: rgba(252, 98, 33, 0.4);
         display:none;grid-column: 4/6;
