--- a/site/css/style.css
+++ b/site/css/style.css
@@ -19,11 +19,11 @@ head{}
         grid-gap: 0px;
         grid-auto-rows: minmax(100px, auto);
       }
-      .one {background-color: rgba(252, 98, 33, 0.4);
+      .one {background-color:white;color:white;font-size:12px;
         grid-column: 1/3;
         grid-row: 1/3;
       }
-   .one:hover{background-color:rgba(252, 98, 33, 1);
+   .one:hover{
             }
 
       .two {background-color: rgba(33, 252, 222, 0.4);
