--- a/site/css/style.css
+++ b/site/css/style.css
@@ -19,7 +19,7 @@ head{}
         grid-gap: 0px;
         grid-auto-rows: minmax(100px, auto);
       }
-      .one {z-index:1;background-color:white;color:white;font-size:12px;
+      .one {z-index:1;color:white;font-size:12px;
         grid-column: 1/3;
         grid-row: 1/3;
       }
