--- a/site/css/style.css
+++ b/site/css/style.css
@@ -11,7 +11,7 @@ head{}
         max-width: 1000px;
         margin: 0 auto;
       }
-.wrapper > div { padding: 1em;color: black;font-family: 'Press Start 2P', cursive;
+.wrapper > div { padding: 1em;font-family: 'Press Start 2P', cursive;
 }
 .wrapper {
         display: grid;
@@ -30,7 +30,7 @@ head{}
         grid-column: 3/5;
         grid-row: 1/3;
       }
-   .two:hover{;background-color: rgba(33, 252, 222, 1);
+   .two:hover{color:white;background-color: rgba(33, 252, 222, 1);
       grid-column: 1/5;
      grid-row: 1/3;}
 
