--- a/site/css/style.css
+++ b/site/css/style.css
@@ -30,7 +30,7 @@ head{}
         grid-column: 3/5;
         grid-row: 1/3;
       }
-   .two:hover{color:white;background-color: rgba(33, 252, 222, 1);
+   .two:hover{color:rgba(33, 252, 222, 1);background-color: rgba(33, 252, 222, 1);
       grid-column: 1/5;
      grid-row: 1/3;}
 
