--- a/site/css/style.css
+++ b/site/css/style.css
@@ -33,15 +33,15 @@ head{}
             }
 
       .two {color:black;font-size:12px;background-color:magenta;
-        grid-column: 3/5;
+        grid-column: 4/5;
         grid-row: 1/3;
       }
    .two:hover{background-color:red;
-      grid-column: 1/5;
-     grid-row: 1/3;}
+      grid-column: 4/7;
+     grid-row: 1/2;}
      .p-2 {display:none;z-index:1;color:white;font-size:12px;
-      grid-column:1;
-      grid-row: 1;
+      grid-column:5/7;
+      grid-row: 1/2;
      }
 
       .three {;color:black;font-size:12px;background-color:cyan;
