--- a/site/css/style.css
+++ b/site/css/style.css
@@ -21,27 +21,27 @@ head{}
       }
       .one {;color:black;font-size:12px;background-color:cyan;
         grid-column:2/4;
-        grid-row: 1/2;
+        grid-row: 1/3;
       }
    .one:hover{background-color:blue;
       grid-column:1/4;
-      grid-row:1/4
+      grid-row:1/5
             }
             .p-1 {z-index:1;color:white;font-size:26px;
               grid-column:1;
-              grid-row: 1/4;
+              grid-row: 1/5;
             }
 
       .two {color:black;font-size:12px;background-color:magenta;
         grid-column: 4/5;
-        grid-row: 1/3;
+        grid-row: 1/4;
       }
    .two:hover{background-color:red;
       grid-column: 4/7;
-     grid-row: 1/2;}
-     .p-2 {display:none;z-index:1;color:white;font-size:12px;
+     grid-row: 1/3;}
+     .p-2 {z-index:1;color:white;font-size:26px;
       grid-column:5/7;
-      grid-row: 1/2;
+      grid-row: 1/3;
      }
 
       .three {;color:black;font-size:12px;background-color:cyan;
