--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,7 +1,7 @@
 head{}
    body{}
       header{margin:auto;}
-      h1{font-family: 'Hanalei Fill', cursive;margin:auto;text-align:center;}
+      h1{font-family: 'Wire One', sans-serif;margin:auto;text-align:center;}
          h2{text-align:center;}
    main{padding:80px}
 
@@ -11,7 +11,7 @@ head{}
         max-width: 1200px;
         margin: 0 auto;
       }
-.wrapper > div { padding: 1em;font-family: 'Press Start 2P', cursive;
+.wrapper > div { padding: 1em;font-family: 'Barlow Condensed', cursive;
 }
 .wrapper {
         display: grid;
