--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,8 +1,8 @@
 head{}
    body{}
       header{margin:auto;}
-      h1{font-family: 'Wire One', sans-serif;margin:auto;text-align:center;}
-         h2{text-align:center;}
+      h1{font-family: 'Wire One', sans-serif;margin:auto;text-align:center;font-size:200px}
+         h2{text-align:center;font-size:40px;}
    main{padding:80px}
 
       * {box-sizing: border-box;}
