--- a/site/css/style.css
+++ b/site/css/style.css
@@ -55,7 +55,7 @@ head{}
     grid-row: 3/5;}
 
       .four {color:black;font-size:80px;background-color:magenta;
-         display:none;grid-column: 2/5;
+         grid-column: 2/5;
         grid-row: 6/8;}
 
    .four:hover{background-color:red;color:red;
